--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
-*{
-    box-sizing: border-box;
-}
+
+    box-sizing border-box
+
 
 html{
     scroll-behavior: smooth;
@@ -26,7 +26,7 @@ button{
     border: 2px solid rgba(0,0,0,0.3);
     box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
     color: white;
-    background-color: rgb(7, 15, 255);
+    background-color: rgb(248, 4, 4);
 }
 
 button:hover{
@@ -74,7 +74,7 @@ header a{
 }
 
 header a:hover{
-    color: rgb(20, 3, 248);
+    color: rgb(255, 10, 128);
 }
 
 #hero{
